--- a/Developer/AKSampler/Mac AUv2 Plugin/Plugin GUI/AKSampler_UIView.xib
+++ b/Developer/AKSampler/Mac AUv2 Plugin/Plugin GUI/AKSampler_UIView.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="13771" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14109" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="13771"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14109"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
         <capability name="stacking Non-gravity area distributions on NSStackView" minToolsVersion="7.0" minSystemVersion="10.11"/>
     </dependencies>
@@ -14,14 +14,14 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="c22-O7-iKe" customClass="AKSampler_UIView">
-            <rect key="frame" x="0.0" y="0.0" width="556" height="440"/>
+            <rect key="frame" x="0.0" y="0.0" width="556" height="495"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <stackView distribution="equalSpacing" orientation="vertical" alignment="leading" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Xbw-aw-rn4">
-                    <rect key="frame" x="10" y="10" width="536" height="420"/>
+                    <rect key="frame" x="10" y="10" width="536" height="475"/>
                     <subviews>
                         <stackView distribution="fill" orientation="vertical" alignment="leading" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ENu-hg-tvZ" userLabel="Primary controls">
-                            <rect key="frame" x="0.0" y="353" width="536" height="67"/>
+                            <rect key="frame" x="0.0" y="408" width="536" height="67"/>
                             <subviews>
                                 <stackView distribution="fill" orientation="horizontal" alignment="top" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6oO-PF-1xd" userLabel="Master Volume">
                                     <rect key="frame" x="0.0" y="50" width="536" height="17"/>
@@ -180,7 +180,7 @@
                             </customSpacing>
                         </stackView>
                         <stackView distribution="fill" orientation="vertical" alignment="leading" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hA2-GM-XM0" userLabel="Amp EG controls">
-                            <rect key="frame" x="0.0" y="240" width="536" height="92"/>
+                            <rect key="frame" x="0.0" y="288" width="536" height="92"/>
                             <subviews>
                                 <stackView distribution="fill" orientation="horizontal" alignment="top" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oEW-gT-wPg" userLabel="Amp Attack">
                                     <rect key="frame" x="0.0" y="75" width="536" height="17"/>
@@ -389,10 +389,10 @@
                             </customSpacing>
                         </stackView>
                         <stackView distribution="fill" orientation="vertical" alignment="leading" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oJ4-ap-wij" userLabel="Filter controls">
-                            <rect key="frame" x="0.0" y="155" width="536" height="64"/>
+                            <rect key="frame" x="0.0" y="170" width="536" height="89"/>
                             <subviews>
                                 <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="eoH-63-eDf">
-                                    <rect key="frame" x="-2" y="48" width="164" height="18"/>
+                                    <rect key="frame" x="-2" y="73" width="164" height="18"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="160" id="drs-nU-b0N"/>
                                     </constraints>
@@ -405,7 +405,7 @@
                                     </connections>
                                 </button>
                                 <stackView distribution="fill" orientation="horizontal" alignment="top" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="44H-4c-a6m" userLabel="Filter Cutoff">
-                                    <rect key="frame" x="0.0" y="25" width="536" height="17"/>
+                                    <rect key="frame" x="0.0" y="50" width="536" height="17"/>
                                     <subviews>
                                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="IoT-y2-XJu" userLabel="Label">
                                             <rect key="frame" x="-2" y="0.0" width="144" height="17"/>
@@ -440,6 +440,54 @@
                                     <constraints>
                                         <constraint firstItem="8Eb-YI-93B" firstAttribute="baseline" secondItem="IoT-y2-XJu" secondAttribute="baseline" id="5Zb-vk-l4r"/>
                                         <constraint firstItem="L82-kL-BJv" firstAttribute="baseline" secondItem="IoT-y2-XJu" secondAttribute="baseline" id="kRB-aI-mq2"/>
+                                    </constraints>
+                                    <visibilityPriorities>
+                                        <integer value="1000"/>
+                                        <integer value="1000"/>
+                                        <integer value="1000"/>
+                                    </visibilityPriorities>
+                                    <customSpacing>
+                                        <real value="3.4028234663852886e+38"/>
+                                        <real value="3.4028234663852886e+38"/>
+                                        <real value="3.4028234663852886e+38"/>
+                                    </customSpacing>
+                                </stackView>
+                                <stackView distribution="fill" orientation="horizontal" alignment="top" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="G3e-AZ-ssP" userLabel="Filter EG Strength">
+                                    <rect key="frame" x="0.0" y="25" width="536" height="17"/>
+                                    <subviews>
+                                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="LnO-3T-xNy" userLabel="Label">
+                                            <rect key="frame" x="-2" y="0.0" width="144" height="17"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="140" id="UYf-MJ-TQp"/>
+                                            </constraints>
+                                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Filter EG Strength" id="Lct-Du-cU4">
+                                                <font key="font" metaFont="system"/>
+                                                <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                                <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                            </textFieldCell>
+                                        </textField>
+                                        <slider verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ClQ-1b-FxN">
+                                            <rect key="frame" x="146" y="-2" width="304" height="19"/>
+                                            <sliderCell key="cell" continuous="YES" state="on" alignment="left" maxValue="1000" doubleValue="500" tickMarkPosition="above" sliderType="linear" id="Eve-N6-9hr"/>
+                                            <connections>
+                                                <action selector="onFilterEgStrengthSlider:" target="c22-O7-iKe" id="KLC-Qj-tdr"/>
+                                            </connections>
+                                        </slider>
+                                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="DDj-px-abs" userLabel="Readout">
+                                            <rect key="frame" x="454" y="0.0" width="84" height="17"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="80" id="9m6-lx-65s"/>
+                                            </constraints>
+                                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Label" id="pfw-Wg-ypb">
+                                                <font key="font" metaFont="system"/>
+                                                <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                                <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                            </textFieldCell>
+                                        </textField>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="DDj-px-abs" firstAttribute="baseline" secondItem="LnO-3T-xNy" secondAttribute="baseline" id="ooY-F6-V6e"/>
+                                        <constraint firstItem="ClQ-1b-FxN" firstAttribute="baseline" secondItem="LnO-3T-xNy" secondAttribute="baseline" id="zkn-nL-qCJ"/>
                                     </constraints>
                                     <visibilityPriorities>
                                         <integer value="1000"/>
@@ -505,15 +553,17 @@
                                 <integer value="1000"/>
                                 <integer value="1000"/>
                                 <integer value="1000"/>
+                                <integer value="1000"/>
                             </visibilityPriorities>
                             <customSpacing>
+                                <real value="3.4028234663852886e+38"/>
                                 <real value="3.4028234663852886e+38"/>
                                 <real value="3.4028234663852886e+38"/>
                                 <real value="3.4028234663852886e+38"/>
                             </customSpacing>
                         </stackView>
                         <stackView distribution="fill" orientation="vertical" alignment="leading" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oLt-iE-4d8" userLabel="Filter EG controls">
-                            <rect key="frame" x="0.0" y="42" width="536" height="92"/>
+                            <rect key="frame" x="0.0" y="50" width="536" height="92"/>
                             <subviews>
                                 <stackView distribution="fill" orientation="horizontal" alignment="top" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YPW-Pp-hqG" userLabel="Filter Attack">
                                     <rect key="frame" x="0.0" y="75" width="536" height="17"/>
@@ -813,6 +863,8 @@
                 <outlet property="filterCutoffText" destination="L82-kL-BJv" id="nTd-kr-rea"/>
                 <outlet property="filterDecaySlider" destination="gdA-qQ-mkH" id="CSZ-d0-FaX"/>
                 <outlet property="filterDecayText" destination="O8O-PG-vWa" id="cIL-bd-1M9"/>
+                <outlet property="filterEgStrengthSlider" destination="ClQ-1b-FxN" id="X9s-kN-UAM"/>
+                <outlet property="filterEgStrengthText" destination="DDj-px-abs" id="aSm-Fb-bjI"/>
                 <outlet property="filterEnableCheckbox" destination="eoH-63-eDf" id="I5D-mH-Nke"/>
                 <outlet property="filterReleaseSlider" destination="6dn-VB-JSb" id="QDm-vF-mbf"/>
                 <outlet property="filterReleaseText" destination="bLo-lW-fYw" id="gJ2-Fv-3ux"/>
@@ -828,7 +880,7 @@
                 <outlet property="volumeSlider" destination="Yrt-mh-chR" id="umb-qx-01E"/>
                 <outlet property="volumeText" destination="BF2-i5-2QS" id="cvb-Id-8KX"/>
             </connections>
-            <point key="canvasLocation" x="132" y="304"/>
+            <point key="canvasLocation" x="132" y="276.5"/>
         </customView>
     </objects>
 </document>
